--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,13 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "~4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4.0",
+        "mailgun/mailgun-php": "^2.4",
+        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/message": "^1.6"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
